--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,11 +1,23 @@
+@article{Amoyal2021LearningTR,
+  title={QAMPARI: An Open-domain Question Answering Benchmark for Questions with Many Answers from Multiple Paragraphs},
+  author={Amouyal, Samuel Joseph and Rubin, Ohad and Yoran, Ori and Wolfson, Tomer and Herzig, Jonathan and Berant, Jonathan},
+  journal={ArXiv},
+  abstract={Existing benchmarks for open-domain question answering (ODQA) typically focus on questions whose answers can be extracted from a single paragraph. By contrast, many natural questions, such as "What players were drafted by the Brooklyn Nets?" have a list of answers. Answering such questions requires retrieving and reading from many passages, in a large corpus. We introduce QAMPARI, an ODQA benchmark, where question answers are lists of entities, spread across many paragraphs. We created QAMPARI by (a) generating questions with multiple answers from Wikipedia's knowledge graph and tables, (b) automatically pairing answers with supporting evidence in Wikipedia paragraphs, and (c) manually paraphrasing questions and validating each answer. We train ODQA models from the retrieve-and-read family and find that QAMPARI is challenging in terms of both passage retrieval and answer generation, reaching an F1 score of 26.6 at best. Our results highlight the need for developing ODQA models that handle a broad range of question types, including single and multi-answer questions.},
+  year={2022},
+  arxiv={2205.12665},
+  volume={abs/2205.12665}
+}
+
 @article{Rubin2021LearningTR,
   title={Learning To Retrieve Prompts for In-Context Learning},
   author={Ohad Rubin and Jonathan Herzig and Jonathan Berant},
   journal={ArXiv},
   abstract={In-context learning is a recent paradigm in natural language understanding, where a large pre-trained language model (LM) observes a test instance and a few training examples as its input, and directly decodes the output without any update to its parameters. However, performance has been shown to strongly depend on the selected training examples (termed prompt). In this work, we propose an efficient method for retrieving prompts for in-context learning using annotated data and a LM. Given an input-output pair, we estimate the probability of the output given the input and a candidate training example as the prompt, and label training examples as positive or negative based on this probability. We then train an efficient dense retriever from this data, which is used to retrieve training examples as prompts at test time. We evaluate our approach on three sequence-to-sequence tasks where language utterances are mapped to meaning representations, and find that it substantially outperforms prior work and multiple baselines across the board.},
   year={2021},
+  booktitle={NAACL},
   code={https://github.com/OhadRubin/EPR},
   arxiv={2112.08633},
+  abbr={NAACL},
   volume={abs/2112.08633}
 }
 
