--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,11 +1,12 @@
-@misc{rubin2023longrange,
+@article{rubin2023longrange,
       title={Long-range Language Modeling with Self-retrieval}, 
       author={Ohad Rubin and Jonathan Berant},
-      year={2023},
+      journal={ArXiv},
       abstract={Retrieval-augmented language models (LMs) have received much attention recently. However, typically the retriever is not trained jointly as a native component of the LM, but added to an already-pretrained LM, which limits the ability of the LM and the retriever to adapt to one another. In this work, we propose the Retrieval-Pretrained Transformer (RPT), an architecture and training procedure for jointly training a retrieval-augmented LM from scratch for the task of modeling long texts. Given a recently generated text chunk in a long document, the LM computes query representations, which are then used to retrieve earlier chunks in the document, located potentially tens of thousands of tokens before. Information from retrieved chunks is fused into the LM representations to predict the next target chunk. We train the retriever component with a semantic objective, where the goal is to retrieve chunks that increase the probability of the next chunk, according to a reference LM. We evaluate RPT on four long-range language modeling tasks, spanning books, code, and mathematical writing, and demonstrate that RPT improves retrieval quality and subsequently perplexity across the board compared to strong baselines.},
-      eprint={2306.13421},
-      archivePrefix={arXiv},
-      primaryClass={cs.CL}
+      year={2023},
+      arxiv={2306.13421},
+      primaryClass={cs.CL},
+      volume={abs/2306.13421},
 }
 
 @article{Amoyal2021LearningTR,
